# oxlgr-pe-sentinel

./: CMakeLists.txt  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  build_windows.bat
docs/: ENTROPY.md
examples/: USAGE.md
include/oxlgr/: byte_reader.hpp  entropy.hpp  indicators.hpp  pe_parser.hpp  report.hpp  strings.hpp  types.hpp
src/: entropy.cpp  indicators.cpp  main.cpp  pe_parser.cpp  report.cpp  strings.cpp
tests/: README.md
